# poly2vox

./: .gitignore  CMakeLists.txt  LICENSE  README.md  poly2vox.kdev4
data/: readme.txt
src/: main.cpp
